Fixed overlap on footer page nav
Fixed overlap on footer page nav when browser is very narrow

--- a/wp-content/themes/pebc-esdb/style.css
+++ b/wp-content/themes/pebc-esdb/style.css
@@ -204,6 +204,7 @@ input, select, textarea {
 
 .navigation li {
 	display: inline;
+	line-height:64px;
 }
 
 .navigation li a,
